--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Ali G
-logo: /assets/image/headshot.png
+logo: /assets/images/headshot.png
 description: PhD Computational Chemistry | St Andrews | Professor Michael B\"uhl 
 theme: jekyll-theme-minimal
