--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,17 @@
 title: Ali G
-logo: /assets/images/headshot.png
-description: PhD Computational Chemistry | St Andrews | Professor Michael B\"uhl 
+logo: "/assets/images/headshot.png"
+description: "PhD Computational Chemistry | St Andrews | Professor Michael B\"uhl"
 theme: jekyll-theme-minimal
 
-minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
-twitter:
-  username               :@ali_goodfellow
-og_image                 :  
+author:
+ name      : "Ali Goodfellow"
+ avatar    : "/assets/images/headshot.png"
+ bio       : "PhD Computational Chemistry | St Andrews | Professor Michael B\"uhl"
+ location  : "St Andrews, Scotland, UK"
+ email     :
+ github    : "aligfellow"
+ linkedin  : "ali-goodfellow-11b531283"
+ twitter   : "ali_goodfellow"
+ orcid     : "https://orcid.org/0000-0002-0064-5007"
+
+ 
